package ar.edu.utn.frba.dds.notificaciones;

public interface Notificable {
    public String getInfo();
}
